--- a/src/components/BreadCrumb/BreadCrumb.css
+++ b/src/components/BreadCrumb/BreadCrumb.css
@@ -10,10 +10,9 @@
 
 }
 
-@media (min-width: 600px) {
+@media (min-width: 640px) {
     .breadCrumb{
         font-size: 24px;
-        margin: 0rem 0.6rem 1.6rem 0.5rem;
     }
 }
 
